--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -237,7 +237,7 @@
                         <td class="align-center">{{data.kiintio}}</td>
                         <td class="align-center">{{data.inheritance}}</td>
                         <td class="align-center">
-                            <span ng-show="!data.inheritance" class="btn remove" ng-click="model.remove(data)"></span>
+                            <span ng-show="!data.inheritance" class="btn remove" ng-click="removeHakijaryhma(data.oid)"></span>
                         </td>
                     </tr>
                     </tbody>
