--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -2,13 +2,28 @@
 
 <!-- PAGE TEMPLATES -->
 
+<!-- kaava root needed for drag & drop -->
+<script type="text/ng-template" id="root_template.html">
+    <div class="frame">
+        <span class="icon">&#8302;</span>
+        <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
+    </div>
+    <ul class="frame-content">
+        <li class="item" ng-repeat="farg in funktio.funktioargumentit" >
+            <div ng-controller="recurseController">
+                <div ng-include="funktio.template"></div>
+            </div>
+        </li>
+    </ul>
+</script>
+
 <script type="text/ng-template" id="frame_template.html">
     <div class="frame">
         <span class="icon">&#8302;</span>
         <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
     </div>
-    <ul class="frame-content list">
-        <li class="item" ng-repeat="farg in funktio.funktioargumentit" >
+    <ul class="frame-content">
+        <li class="item" ng-repeat="farg in funktio.funktioargumentit">
             <div ng-controller="recurseController">
                 <div ng-include="funktio.template"></div>
             </div>
@@ -29,8 +44,8 @@
         <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
         <span class="notification warning" ng-show="funktio.hasErrors()">!</span>
     </div>
-    <ul class="function-content list">
-        <li class="item" ng-repeat="farg in funktio.funktioargumentit" >
+    <ul class="function-content">
+        <li class="item" ng-repeat="farg in funktio.funktioargumentit" ng-class="farg.dragClasses()">
             <div ng-controller="recurseController">
                 <div ng-include="funktio.template"></div>
             </div>
@@ -46,7 +61,7 @@
 </script>
 
 <script type="text/ng-template" id="tyhja_template.html">
-    <div class="function">
+    <div class="function function-menu">
         <span class="dropzone">{{funktio.otsikko()}}</span>
         
         <table class="dropmenu-table" ng-show="funktio.isLukuarvoFunktio()">
@@ -266,7 +281,7 @@
 
     <div class="clear"></div>
     <div class="gradingformula dd" style="width:60%;float:left;"
-         ng-include="domain.laskentakaavapuu.funktio.template">
+         ng-include="'root_template.html'">
     </div>
     <!--
     jq-nestable="{onChange: kaavaDragged}"
