oph-configuration muutos

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -57,6 +57,7 @@
 
     <!-- virkailija css -->
     <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
+    <link href="../css/other.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div id="application-wrapper">
