--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -56,6 +56,7 @@
     
 
     <!-- virkailija css -->
+    <link href="../css/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <link href="../css/virkailija.css" rel="stylesheet" type="text/css" />
     <link href="../css/other.css" rel="stylesheet" type="text/css" />
 </head>
