--- a/src/main/webapp/html/valintaryhmalomake.html
+++ b/src/main/webapp/html/valintaryhmalomake.html
@@ -256,8 +256,8 @@
 
         
         <div class="grid16-16">
-            <button ng-disabled="!form.$valid" class="button small primary" type="submit">Tallenna</button>
-            <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()">Takaisin</button>
+            <button ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
+            <button type="button" class="float-left margin-right-1 button small" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
         </div>
         <div class="clear"></div>
     </form>
