--- a/src/main/webapp/html/valintaryhmatlistaus.html
+++ b/src/main/webapp/html/valintaryhmatlistaus.html
@@ -1,11 +1,8 @@
 <!-- Node template -->
 <script type="text/ng-template" id="valintaryhma_node.html">
 
-    <span class="state-disabled label">
-        <span   class="disclose icon valintaryhma folder"
-                ng-class="{ collapse: domain.isCollapsed(data), file: domain.isFile(data), open: domain.isExpanded(data)}"
-                ng-click="expandNode(data)">
-        ​</span>
+    <span class="label">
+        <i class="fa fa-users valintaryhma"  ng-class="{ kiinni: domain.isCollapsed(data), eilapsia: domain.isFile(data), auki: domain.isExpanded(data)}" ng-click="expandNode(data)"></i>
          <a href="#/valintaryhma/{{data.oid}}"> {{data.nimi}}</a>
     </span>
     <ol ng-if="data.isVisible" data-valintaryhmaoid="{{data.oid}}" >
@@ -26,8 +23,7 @@
 
 <!--Leaf template -->
 <script type="text/ng-template" id="hakukohde_leaf.html">
-    <span class="icon hakukohde file">​</span>
-    <div class="label"><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}} ({{data.tila}})</a></div>
+    <div class="label"><i class="fa fa-building-o"></i><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}} ({{data.tila}})</a></div>
 </script>
 
 
@@ -61,9 +57,9 @@
 
     <br />
 
-    <a href="#/valintaryhma/root/lisaaSisaltyvaValintaryhma" class="button small">{{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
-    <a href="#/lisaaHakukohde" class="button small">{{'valintaryhmatlistaus.add.hakukohde' | i18n}}</a>
-    <a class="button small" ng-click="domain.expandTree()"> Laajenna puu</a>
+    <a href="#/valintaryhma/root/lisaaSisaltyvaValintaryhma" class="button small primary"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
+    <a href="#/lisaaHakukohde" class="button small primary"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.hakukohde' | i18n}}</a>
+    <a class="button small" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
 
     <br/>
 
@@ -91,13 +87,14 @@
             <tr ng-repeat="data in domain.hakukohteet | orderBy:predicate">
                 <td>
                     <span class="float-left">
-                        <span class="hakukohdeicon">​</span>
-                        <span class="label"><a href="#/hakukohde/{{data.oid}}"> {{data.nimi}} ({{data.tila}})</a></span>
+                         <i class="fa fa-building-o"></i>
+                         <a href="#/hakukohde/{{data.oid}}"> {{data.nimi}} ({{data.tila}})</a>
+
                     </span>
                 </td>
                 <td>
                     <span class="float-left">
-                        <a href="#/valintaryhma/{{parent.oid}}" ng-repeat="parent in data.getParents()">{{parent.nimi}} / </a>
+                        <a href="#/valintaryhma/{{parent.oid}}" ng-repeat="parent in data.getParents()" >{{parent.nimi}} / </a>
                     </span>
                 </td>
             </tr>
