--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -12,11 +12,11 @@
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.nestable.js"></script>
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../jslib/jquery-1.8.3/jquery.i18n.properties-min-1.0.9.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.0-rc.3/angular.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.0-rc.3/angular-resource.js"></script>
-    <script type="text/javascript" src="../jslib/angular-1.2.0-rc.3/angular-route.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.0/angular.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.0/angular-resource.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.0/angular-route.js"></script>
 
-    <script type="text/javascript" src="../jslib/angular-1.2.0-rc.3/angular-animate.js"></script>
+    <script type="text/javascript" src="../jslib/angular-1.2.0/angular-animate.js"></script>
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
