--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -2,6 +2,23 @@
 
 <!-- PAGE TEMPLATES -->
 
+
+<!-- kaava root needed for drag & drop -->
+<script type="text/ng-template" id="root_template.html">
+    <div class="frame">
+        <span class="icon">&#8302;</span>
+        <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
+    </div>
+    <ul kaavadrag class="frame-content">
+        <li class="item" ng-repeat="farg in funktio.funktioargumentit" >
+            <div ng-controller="recurseController">
+                <div ng-include="funktio.template"></div>
+            </div>
+        </li>
+    </ul>
+</script>
+
+
 <script type="text/ng-template" id="frame_template.html">
     <div class="frame">
         <span class="icon">&#8302;</span>
@@ -240,6 +257,8 @@
 </script>
 
 
+
+
 <!-- LASKENTAKAAVAPAGE CONTENT -->
 <h1>Laskentakaavan muokkaus</h1>
 
@@ -269,8 +288,7 @@
     <div class="clear"></div>
     <div class="clear"></div>
     <div class="gradingformula dd" style="width:60%;float:left;"
-    jq-nestable="{onChange: kaavaDragged}" 
-        ng-include="funktio.template">
+        ng-include="'root_template.html'">
     </div>
     <!--
     <div class="gradingformula dd" style="width:60%;float:left;" ng-include="'root_template.html'">
@@ -404,7 +422,6 @@
             
 
             <div class="form-item" ng-if="f.konvertteri && !f.isHaettavaArvoTyyppi()">
-    
                 <div class="form-item-content">
                     <div class="field-select-containerbox">
                         <select ng-change="f.konvertteri.setTyyppi(f.konvertteri.uusityyppi)"
