--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -321,6 +321,7 @@
 
 
             <span class="button small" ng-show="!f.data.deleted" ng-click="f.data.deleted=true">Poista funktiokutsu</span>
+            
             <span class="button small" ng-show="f.data.deleted" ng-click="f.data.deleted=false">Palauta funktiokutsu</span>
         </div>
 
@@ -480,9 +481,13 @@
                 </div>
                 <div class="clear"></div>
             </div>
+            
+            <span class="button small" ng-click="f.removeThis(); selected = null; showTemplate = false">poista funktiokutsu</span>
 
+            <!--
             <span class="button small" ng-show="!f.data.deleted" ng-click="f.data.deleted=true">Poista funktiokutsu</span>
             <span class="button small" ng-show="f.data.deleted" ng-click="f.data.deleted=false">Palauta funktiokutsu</span>
+        -->
         </div>
 
     </div>
