vt-617: arvo hakemukselta -funktion arvomuunninselect ei monistu

--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -380,7 +380,7 @@
                     </div>
                 </div>
                 
-                <div ng-if="f.konvertteri">
+                <div ng-show="f.konvertteri">
                     <label class="form-item-label" style="width:50px;">Arvomuunnin</label>
                     <div class="form-item-content">
                         <div class="field-select-containerbox">
