--- a/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
+++ b/src/main/webapp/html/laskentakaava/laskentakaavalomake.html
@@ -7,7 +7,7 @@
 <script type="text/ng-template" id="root_template.html">
     <div class="frame">
         <span class="icon">&#8302;</span>
-        <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
+        <span class="label" ng-click="showDetails(funktio)"><span class="bold">{{funktio.syoteparametrit[0].data.arvo}}</span> - {{funktio.naytettavaNimi}}</span>
     </div>
     <ul kaavadrag class="frame-content">
         <li class="item" ng-repeat="farg in funktio.funktioargumentit" >
@@ -18,15 +18,14 @@
     </ul>
 </script>
 
-
+<!-- Nimetty lukuarvo tai Nimetty totuusarvo -->
 <script type="text/ng-template" id="frame_template.html">
     <div class="frame">
         <span class="icon">&#8302;</span>
-        <span class="label" ng-click="showDetails(funktio)">{{funktio.naytettavaNimi}}</span>
+        <span class="label" ng-click="showDetails(funktio)">{{funktio.syoteparametrit[0].data.arvo}} - {{funktio.naytettavaNimi}}</span>
     </div>
     <ul ng-init="parent = farg" class="frame-content list">
         <li data-parent="{{parent}}" data-funktio="{{farg}}" class="item" ng-repeat="farg in funktio.funktioargumentit" ng-class="funktio.dragClasses()">
-
             <div ng-controller="recurseController">
                 <div ng-include="funktio.template"></div>
             </div>
@@ -290,15 +289,9 @@
     </div>
 
     <div class="clear"></div>
-    <div class="clear"></div>
     <div class="gradingformula dd" style="width:60%;float:left;"
         ng-include="'root_template.html'">
     </div>
-    <!--
-    <div class="gradingformula dd" style="width:60%;float:left;" ng-include="'root_template.html'">
-        
-    </div>
-    -->
 
 
     
